appId: llc.fungee.ingredicheck
tags: [settings, support]
---
- runFlow: ../../subflows/launch/settings.yaml
- scrollUntilVisible:
    element:
      text: Share us
    direction: DOWN
    timeout: 30000
- tapOn: Share us
- extendedWaitUntil:
    visible:
      text: Share us tapped
    timeout: 30000
- assertVisible: Share us tapped
